chuc nang sap xep

--- a/.env
+++ b/.env
@@ -45,3 +45,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TEMPLATE_ADMIN=/public/templates/admin
 TEMPLATE_BOOK=/public/templates/book
+
+PAGINATE_BOOK=20
